# transfer-table-2023

./: .gitignore  Makefile  build.zig  camera_framegrabber.py  gpio-motor-control-watcher.path  gpio-motor-control-watcher.service  gpio-motor-control.c  gpio-motor-control.py  gpio-motor-control.service  gpio-motor-control.zig  gpio_motor_webui.py  image_correction_experiment.py  install-notes.md  midi_experiment.py  readme.md  remote-run.sh  ssh.sh  sync.sh  ultrasonic-sensor-playground.c  webserver.py  webserver.service
camera-display/: Cargo.toml  camera-display.service  gen_tables.py  readme.md
camera-display/src/: main.rs
catenary-bushings/: catenary-bushings.blend  catenary-bushings.blend1
old_code/: image_correction_experiment.py
research-photos/: academic_samples.xcf
shims/: pigpio.h  real_errno.h
zig_c_code/: linux_priority_affinity_tasks.h
