[package]
name = "camera-display"
version = "0.1.0"
edition = "2021"


[dependencies]
linuxfb = "0.3"
embedded-graphics = "0.8"
jpeg-decoder = "0.3"

[dependencies.v4l]
version = "0.14"
# libv4l (old) and v4l2 (new) are mutually exclusive! TODO see which one our camera talks best to.
# features = [ "libv4l" ]
# default-features = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

